// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`native expanded API should omit transient props 1`] = `
<Text
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`native expanded API withComponent should work 1`] = `
<Text
  style={Object {}}
/>
`;

exports[`native expanded API withComponent should work 2`] = `
<View
  style={Object {}}
/>
`;
